add misusage analysis